--- a/portabombon.html
+++ b/portabombon.html
@@ -17,7 +17,7 @@
 			<div class="logo">
 				<h1>Bombom_Crochet</h1>
 				<h2>Ivonne Roa</h2>
-				<p>Creadora/Tejedora</p>
+				<p>Diseñadora</p>
 			</div>
 			<form action="">
 				<input type="text" class="barra-busqueda" id="barra-busqueda" placeholder="Buscar">				
