Agregamos Mas Imagenes

--- a/portabombon.html
+++ b/portabombon.html
@@ -25,7 +25,7 @@
 			<div class="categorias" id="categorias">
 				<a href="#" class="activo">Todos</a>
 				<a href="#">Muñecas</a>
-				<a href="#">Sweters</a>
+				<a href="#">Ropa</a>
 				<a href="#">Blusas</a>
 				<a href="#">Bolsos</a>
 				<a href="#">Gorros</a>	
@@ -201,6 +201,321 @@
 					<img src="imgcrochet/gorro3.jpg" width="200">
 				</div>
 			</div>
+
+			<div class="item"
+				data-categoria="blusas"
+				data-etiquetas="blusas tejidos crochet niñas mujeres"
+				data-descripcion="23.- blusas tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update1.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="blusas"
+				data-etiquetas="blusas tejidos crochet niñas mujeres"
+				data-descripcion="24.- blusas tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update2.jpg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="gorros"
+				data-etiquetas="gorros tejidos crochet hombres niños niñas mujeres"
+				data-descripcion="25.- gorros tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update3.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="blusas"
+				data-etiquetas="blusas tejidos crochet niñas mujeres"
+				data-descripcion="26.- blusas tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update4.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="blusas"
+				data-etiquetas="blusas tejidos crochet niñas mujeres"
+				data-descripcion="27.- blusas tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update5.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="gorros"
+				data-etiquetas="gorros tejidos crochet hombres niños niñas mujeres"
+				data-descripcion="28.- gorros tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update6.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="blusas"
+				data-etiquetas="blusas tejidos crochet niñas mujeres"
+				data-descripcion="29.- blusas tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update7.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="blusas"
+				data-etiquetas="blusas tejidos crochet niñas mujeres"
+				data-descripcion="30.- blusas tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update8.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="blusas"
+				data-etiquetas="blusas tejidos crochet  niñas mujeres"
+				data-descripcion="31.- blusas tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update9.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="blusas"
+				data-etiquetas="blusas tejidos crochet niñas mujeres"
+				data-descripcion="32.- blusas tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update10.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="blusas"
+				data-etiquetas="blusas tejidos crochet niñas mujeres"
+				data-descripcion="33.- blusas tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update11.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="bolsos"
+				data-etiquetas="bolsos tejidos crochet niñas mujeres"
+				data-descripcion="34.- bolsos tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update12.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="ropa"
+				data-etiquetas="ropa tejidos crochet niñas mujeres"
+				data-descripcion="35.- ropa tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update13.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="ropa"
+				data-etiquetas="ropa tejidos crochet niñas mujeres"
+				data-descripcion="22.- ropa tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update14.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="muñecas"
+				data-etiquetas="muñecas tejidos crochet niños niñas mujeres"
+				data-descripcion="36.- muñecas tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update15.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="zapatos"
+				data-etiquetas="zapatos tejidos crochet niños niñas mujeres"
+				data-descripcion="37.- zapatos tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update16.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="gorros"
+				data-etiquetas="gorros tejidos crochet hombres niños niñas mujeres"
+				data-descripcion="38.- gorros tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update17.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="ropa"
+				data-etiquetas="ropa tejidos crochet niños niñas"
+				data-descripcion="39.- ropa tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update18.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="ropa"
+				data-etiquetas="ropa tejidos crochet niños niñas"
+				data-descripcion="40.- ropa tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update19.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="bolsos"
+				data-etiquetas="bolsos tejidos crochet niñas mujeres"
+				data-descripcion="41.- bolsos tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update20.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="ropa"
+				data-etiquetas="ropa tejidos crochet niños niñas m"
+				data-descripcion="42.- ropa tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update21.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="ropa"
+				data-etiquetas="ropa tejidos crochet niños niñas "
+				data-descripcion="43.- ropa tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update22.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="zapatos"
+				data-etiquetas="zapatos tejidos crochet niños niñas"
+				data-descripcion="44.- zapatos tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update23.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="gorros"
+				data-etiquetas="gorros tejidos crochet hombres niños niñas mujeres"
+				data-descripcion="45.- gorros tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update24.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="zapatos"
+				data-etiquetas="zapatos tejidos crochet niños niñas"
+				data-descripcion="46.- zapatos tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update25.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="gorros"
+				data-etiquetas="gorros tejidos crochet hombres niños niñas mujeres"
+				data-descripcion="47.- gorros tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update26.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="gorros"
+				data-etiquetas="gorros tejidos crochet hombres niños niñas mujeres"
+				data-descripcion="48.- gorros tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update27.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="ropa"
+				data-etiquetas="ropa tejidos crochet niños niñas mujeres"
+				data-descripcion="49.- ropa tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update28.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="gorros"
+				data-etiquetas="gorros tejidos crochet hombres niños niñas mujeres"
+				data-descripcion="50.- gorros tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update29.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="gorros"
+				data-etiquetas="gorros tejidos crochet hombres niños niñas mujeres"
+				data-descripcion="51.- gorros tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update30.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="gorros"
+				data-etiquetas="gorros tejidos crochet hombres niños niñas mujeres"
+				data-descripcion="52.- gorros tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update31.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="gorros"
+				data-etiquetas="gorros tejidos crochet hombres niños niñas mujeres"
+				data-descripcion="53.- gorros tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update32.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="gorros"
+				data-etiquetas="gorros tejidos crochet hombres niños niñas mujeres"
+				data-descripcion="54.- gorros tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update33.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="gorros"
+				data-etiquetas="gorros tejidos crochet hombres niños niñas mujeres"
+				data-descripcion="55.- gorros tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update34.jpeg" width="200">
+				</div>
+			</div>
+
+			<div class="item"
+				data-categoria="blusas"
+				data-etiquetas="blusas tejidos crochet niñas mujeres"
+				data-descripcion="56.- blusas tejidos a tu medida y tu gusto.">
+				<div class="item-contenido">
+					<img src="imgcrochet/update35.jpeg" width="200">
+				</div>
+			</div>
 		</section>
 
 		<section class="overlay" id="overlay">
@@ -221,7 +536,7 @@
 						<i class="fab fa-facebook"></i></a>
 				</div>
 				<div class="contenedor-icono">
-					<a href="#" target="_blank" class="instagram">
+					<a href="https://www.instagram.com/bombom_crochet/" target="_blank" class="instagram">
 						<i class="fab fa-instagram"></i></a>					
 				</div>
 			</div>
